@@ -1,6 +1,11 @@
+2012-02-23  Donal K. Fellows  <dkf@users.sf.net>
+
+	* tests/reg.test (14.21-23): Add tests relating to bug 1115587. Actual
+	bug is characterised by test marked with 'knownBug'.
+
 2012-02-17  Jan Nijtmans  <nijtmans@users.sf.net>
 
-	* generic/tclIOUtil.c: [Bug 2233954] AIX: compile error
+	* generic/tclIOUtil.c: [Bug 2233954]: AIX: compile error
 	* unix/tclUnixPort.h:
 
 2012-02-15  Donal K. Fellows  <dkf@users.sf.net>
